--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,409 @@
+* {
+  font-family: "Lato", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  background-color: #6357ff;
+  min-height: 150vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.appWrapper {
+  max-width: 1920px;
+  margin: 0 auto;
+  position: relative;
+}
+.titleImg {
+  width: 54%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+}
+.titleGradient {
+  width: 54%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.titleWrapper {
+  margin-top: 250px;
+  position: relative;
+  z-index: 6;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.regularText {
+  text-align: left;
+  margin-left: 60px;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+h1 {
+  text-align: left;
+  margin-top: 20px;
+  margin-left: 60px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 72px;
+  line-height: 86px;
+}
+
+.tryButton {
+  display: block;
+  margin: 40px 0 0 60px;
+  padding: 17px 29px;
+  color: #2c2c2c;
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: none;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: left;
+}
+
+.tieWrapper {
+  position: relative;
+}
+.titleLine {
+  width: 75%;
+  margin-left: 3vw;
+  display: block;
+}
+.priceWrapper {
+  position: absolute;
+  top: 30vw;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #ffffff;
+}
+
+.priceHead {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 43px;
+  padding-bottom: 50px;
+}
+
+.priceBold {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 33px;
+  text-align: left;
+  list-style-type: disc;
+}
+
+.priceReg {
+  font-style: normal;
+  font-weight: normal;
+  text-align: left;
+  font-size: 24px;
+  line-height: 33px;
+  padding: 15px 0;
+}
+
+.profitWrapper {
+  background-color: #ffffff;
+  width: 100%;
+  z-index: 5;
+  position: relative;
+}
+
+.profitGrid {
+  max-width: 1620px;
+  display: grid;
+  padding: 100px 50px;
+  margin: -200px auto 0;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 70px auto auto auto auto auto auto;
+}
+
+.photoGrid {
+  grid-column: 3 / 4;
+}
+.titleGrid {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 43px;
+}
+
+.sensOne {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  display: inline;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: start;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+.sensOne ul li {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  list-style-type: disc;
+}
+.dispFlex {
+  display: flex;
+  align-items: center;
+}
+.sensList {
+  display: flex;
+  justify-content: start;
+}
+.sensColumn {
+  text-align: left;
+  min-width: 130px;
+  padding: 20px 17px 0;
+}
+.sensText {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  padding: 20px 60px 0 0;
+  text-align: start;
+}
+.sensTwo {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+  /* display: flex; */
+  align-items: center;
+  justify-content: start;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+.sensThree {
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+  /* display: flex; */
+  align-items: center;
+  justify-content: start;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+.sensFour {
+  grid-column: 2 / 3;
+  grid-row: 5 / 6;
+  /* display: flex; */
+  align-items: center;
+  justify-content: start;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+.sensFive {
+  grid-column: 1 / 2;
+  grid-row: 6 / 7;
+  /* display: flex; */
+  align-items: center;
+  justify-content: start;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+.sensSix {
+  grid-column: 2 / 3;
+  grid-row: 7 / 8;
+  /* display: flex; */
+  align-items: center;
+  justify-content: start;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
 }
 
-.App-link {
-  color: #61dafb;
+.dash {
+  height: 2px;
+  width: 56px;
+  background-color: #6357ff;
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.sceneWrapper {
+  background-color: #2c2c2c;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.sceneTitle {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 43px;
+  color: #ffffff;
+  text-align: center;
+  padding: 100px 0 50px;
+}
+
+.sceneGrid {
+  display: grid;
+  max-width: 1240px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  background-color: transparent;
+  row-gap: 70px;
+}
+
+.sceneSubtitle {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  /* identical to box height */
+  text-align: start;
+  padding: 70px 0 35px;
+  /* White */
+
+  color: #ffffff;
+}
+.sceneText {
+  color: #ffffff;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: start;
+  padding-left: 17px;
+  padding-bottom: 30px;
+  width: 60%;
+}
+.sceneTextRight {
+  padding-left: 40%;
+}
+
+.sceneText::before {
+  content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: #6357ff; /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -17px;
+}
+.sceneBlock1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+.sceneBlock2 {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+.sceneBlock3 {
+  padding-top: 70px;
+  padding-bottom: 100px;
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+/* Accordion sector start */
+.accordeonWrapper {
+  background-color: #6357ff;
+  min-height: 1300px;
+}
+.accordionHead {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 43px;
+  padding-top: 200px;
+  /* White */
+
+  color: #ffffff;
+}
+
+.accordion {
+  max-width: 900px;
+  margin: 2rem auto;
+}
+
+.accordion-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  cursor: pointer;
+  background-color: transparent;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  color: #ffffff;
+  text-align: left;
+}
+
+.accordion-title:hover {
+  background-color: transparent;
+}
+
+.accordion-title,
+.accordion-content {
+  padding: 1rem;
+}
+
+.accordion-content {
+  background-color: transparent;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  color: #ffffff;
+  text-align: left;
+}
+.showHide {
+  font-size: 40px;
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    font-size: 18px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .accordion {
+    width: 90%;
+  }
+}
+
+/* Accordion sector end */
+
+@media screen and (max-width: 1200px) {
+  .regularText {
+    text-align: center;
+    margin-left: 0;
+  }
+  h1 {
+    text-align: center;
+  }
+  .tryButton {
+    margin: 40px auto 0;
+  }
+  .titleLine {
+    display: none;
+  }
+  .priceWrapper {
+    min-height: 800px;
+    position: relative;
   }
 }
